<resources>
    <string name="app_name">MDroid - Moodle</string>
    <string name="action_settings">Settings</string>
    <string name="app_service_description">This service is triggered by Android system based on notification frequency setting in the app. It checks for updates and stops itself, usually within a couple of minutes.</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="activity_tutorial_beautiful">Hello Beautiful!</string>
    <string name="activity_tutorial_swipe_instruction">Swipe left</string>
    <string name="activity_tutorial_symbol_plus">+</string>
    <string name="activity_tutorial_symbol_or">\/</string>
    <string name="activity_tutorial_symbol_dot">.</string>
    <string name="activity_tutorial_mdroid_made_title">You got MDroid!</string>
    <string name="activity_tutorial_mdroid_made_description">..and that\' how</string>
    <string name="activity_tutorial_support_title">Support MDroid</string>
    <string name="activity_tutorial_support_description_l1">Donate a dollar</string>
    <string name="activity_tutorial_support_description_l2">Rate it with 5 stars</string>
    <string name="activity_tutorial_support_description_l3">It keeps us motivated</string>
    <string name="activity_tutorial_contribute_title">You can contribute!</string>
    <string name="activity_tutorial_contribute_description_l1">Translate to your language</string>
    <string name="activity_tutorial_contribute_description_l2">Code a cool feature</string>
    <string name="activity_tutorial_contribute_description_l3">It\'s open source</string>
    <string name="activity_tutorial_help_title">Problem?</string>
    <string name="activity_tutorial_help_description_l1">Help docs are in Settings</string>
    <string name="activity_tutorial_help_description_l2">You can hide Ads in Settings</string>
    <string name="activity_tutorial_help_description_l3">Still problem? Submit a bug report</string>
    <string name="activity_tutorial_tutorial_end_button">Let\'s roll</string>
    <string name="activity_login_normal">Normal</string>
    <string name="activity_login_paranoid">Paranoid</string>
    <string name="activity_login_email_hint">username or email</string>
    <string name="activity_login_email_icon_desc">Login icon</string>
    <string name="activity_login_password_hint">password</string>
    <string name="activity_login_password_icon_desc">Login icon</string>
    <string name="activity_login_url_hint">moodle url</string>
    <string name="activity_login_url_icon_desc">Url icon</string>
    <string name="activity_login_login_button">Login</string>
    <string name="activity_login_token_hint">your account token</string>
    <string name="activity_login_status_title">Logging in..</string>
    <string name="activity_login_progress_retry">Retry</string>
    <string name="activity_login_demo">Demo</string>
    <string name="activity_login_help">What\'s this</string>
    <string name="login_prog_loggingin">Logging in..</string>
    <string name="login_prog_sync_data">Syncing data</string>
    <string name="login_prog_sync_course">Syncing courses</string>
    <string name="login_prog_sync_message">Syncing messages</string>
    <string name="login_prog_sync_contact">Syncing contacts</string>
    <string name="login_prog_welcome">Welcome</string>
    <string name="login_prog_sync_done">Sync complete!</string>
    <string name="login_prog_sync_failed">Sync failed!</string>
    <string name="login_prog_token_failed">Token fetch failed!</string>
    <string name="login_prog_siteinfo_failed">Siteinfo fetch failed!</string>
    <string name="login_error">Error</string>
    <string name="login_unknown_error">Unknown error</string>
    <string name="login_errorcode">Error code</string>
    <string name="activity_webservices_main_title">Webservices off</string>
    <string name="activity_webservices_main_description">Webservices are required for MDroid to work.</string>
    <string name="activity_webservices_help_button">Help with Webservices</string>
    <string name="activity_webservices_legacy_version_text">Previous version worked for you? \nEnabling webservices is not a feasible option?</string>
    <string name="activity_webservices_legacy_version_button">Try Legacy version</string>
    <string name="user_picture">User profile image</string>
    <string name="list_course_summary">Summary</string>
    <string name="list_course_sample_shortname">CS 101 2013 1</string>
    <string name="list_course_sample_fullname">Introduction to computer science</string>
    <string name="list_item_sample_menu">Course</string>
    <string name="syncing">Syncing..</string>
    <string name="sample_sectionname">16th August - 19th August</string>
    <string name="sample_modulename">Assignment 2</string>
    <string name="sample_calendar_date">Today</string>
    <string name="sample_contact_name">David Hemsworth pan</string>
    <string name="sample_contact_unread">10</string>
    <string name="activity_settings_cat_active_account_title">Active account settings</string>
    <string name="activity_settings_cat_active_account_summary">Active account settings</string>
    <string name="activity_settings_logout_title">Logout</string>
    <string name="activity_settings_logout_summary">logout current account</string>
    <string name="activity_settings_message_sign_title">Message signature</string>
    <string name="activity_settings_message_sign_positive_btn">Update</string>
    <string name="activity_settings_message_sign_default">Sent from MDroid - Moodle for Android</string>
    <string name="activity_settings_message_sign_summary">Appends this text at the end of each message you send. Donate only!</string>
    <string name="activity_settings_cat_notification_title">Notifications</string>
    <string name="activity_settings_cat_notification_summary">Notification settings</string>
    <string name="activity_settings_notifi_title">Notifications</string>
    <string name="activity_settings_notifi_summary">Notifies you when new content arrives in Moodle for your account. Donate only!</string>
    <string name="activity_settings_notifi_freq_title">Sync frequency</string>
    <string name="activity_settings_notifi_freq_summary">Frequency of contents checking. Notifications must be enabled.</string>
    <string-array name="activity_settings_notification_frequency_entries">
        <item>Hourly</item>
        <item>Every 3 hours</item>
        <item>Every 6 hours</item>
        <item>Every 12 hours</item>
        <item>Daily</item>
        <item>Every 3 days</item>
        <item>Weekly</item>
    </string-array>
    <string-array name="activity_settings_notification_frequency_values">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
        <item>72</item>
        <item>168</item>
    </string-array>
    <string name="activity_settings_notification_frequency_default">24</string>
    <string name="activity_settings_screen_notifi_events_title">Notification events</string>
    <string name="activity_settings_screen_notifi_events_summary">Events you want to notified about. Notifications must be enabled.</string>
    <string name="activity_settings_notifi_coursecontent_title">Course contents</string>
    <string name="activity_settings_notifi_coursecontent_summary">When new contents added to any of your favourite course</string>
    <string name="activity_settings_notifi_posts_title">Forum replies</string>
    <string name="activity_settings_notifi_posts_summary">For new replies in any forum of your favourite course</string>
    <string name="activity_settings_notifi_discussion_title">Forum topics</string>
    <string name="activity_settings_notifi_discussion_summary">A new forum thread has been started in any forum of your favourite courses</string>
    <string name="activity_settings_notifi_forum_title">Forums</string>
    <string name="activity_settings_notifi_forum_summary">A new forum started in your favourite courses</string>
    <string name="activity_settings_notifi_message_title">Messages</string>
    <string name="activity_settings_notifi_message_summary">Someone messaged you on Moodle</string>
    <string name="activity_settings_notifi_event_title">Events</string>
    <string name="activity_settings_notifi_event_summary">When new events appear in your Moodle calendar</string>
    <string name="activity_settings_notifi_participant_title">Course participants</string>
    <string name="activity_settings_notifi_participant_summary">Someone newly joined one of your favourite courses</string>
    <string name="activity_settings_notifi_contact_title">Contacts</string>
    <string name="activity_settings_notifi_contact_summary">When you have new contacts in your contact list</string>
    <string name="activity_settings_cat_general_title">General</string>
    <string name="activity_settings_cat_general_summary">General settings</string>
    <string name="activity_settings_playgames_title_connect">Connect Google Playgames</string>
    <string name="activity_settings_playgames_title_disconnect">Disconnect Google Playgames</string>
    <string name="activity_settings_playgames_summary">Moodle on MDroid can be fun!</string>
    <string name="activity_settings_playgames_achiev_title">Achievements</string>
    <string name="activity_settings_hideads_title">Hide ads temporarily</string>
    <string name="activity_settings_hideads_summary">Works only for 3 times. To hide them permanently, please make a donation.</string>
    <string name="activity_settings_debug_title">Advanced logging</string>
    <string name="activity_settings_debug_summary">If enabled, gives more information on login and other errors</string>
    <string name="activity_settings_cat_help_title">Help</string>
    <string name="activity_settings_cat_help_summary">app related help</string>
    <string name="activity_settings_help_title">Help</string>
    <string name="activity_settings_privacy_title">Privacy policy</string>
    <string name="activity_settings_tutorial_title">Tutorial</string>
    <string name="activity_settings_cat_about_title">About</string>
    <string name="activity_settings_cat_about_summary">about MDroid and developer</string>
    <string name="activity_settings_website_title">Website</string>
    <string name="activity_settings_dev_title">Developer</string>
    <string name="activity_settings_osl_title">Open source licenses</string>
    <string name="dialog_playgames_desc">Moodle can fun! Connect to Playgames?</string>
    <string name="dialog_playgames_later">Not now</string>
    <string name="dialog_playgames_signin">Connect</string>
    <string name="dialog_rate_desc">Good ratings motivate! Rate MDroid?</string>
    <string name="dialog_rate_later">Not now</string>
    <string name="dialog_rate_signin">Rate it</string>
    <string name="donations_header_text">Donate for the features you want to see. Any donation will unlock pro access.</string>
    <string name="donations_already_purchased">You purchased this already!</string>
    <string name="donations_purchase_failed">Purchase failed! Please try again!</string>
    <string name="banner_ad_unit_id">ca-app-pub-5596738936514245/8048848210</string>
</resources>