<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beautiful_red"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/activity_tutorial_mdroid_made_title"
                android:src="@drawable/help_inverted" />

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/activity_tutorial_symbol_dot"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/activity_tutorial_mdroid_made_title"
                android:src="@drawable/bug_report_inverted" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/activity_tutorial_help_description_l1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/activity_tutorial_help_description_l2"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/activity_tutorial_help_description_l3"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp"
        android:background="@drawable/white_btn_bg"
        android:gravity="center"
        android:onClick="openLoginPage"
        android:padding="8dp"
        android:text="@string/activity_tutorial_tutorial_end_button"
        android:textColor="@color/white"
        android:textSize="20sp" />

</FrameLayout>