<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey14"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/clickable_card"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/forum_name"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_contact_name"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/forum_coursename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/sample_modulename"
                android:textColor="@color/grey3"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/forum_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="right"
                android:text="@string/sample_calendar_date"
                android:textColor="@color/grey3"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/forum_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/sample_sectionname"
            android:textColor="@color/grey4"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>