<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/beautiful_orange"
        android:gravity="center_horizontal"
        android:minHeight="75dp"
        android:orientation="vertical"
        android:paddingTop="50dp" >

        <TextView
            android:id="@+id/dialog_loading_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/dialog_playgames_desc"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:id="@+id/dialog_playgames_later"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/solid_button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/dialog_playgames_later"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dialog_playgames_connect"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/solid_button"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/dialog_playgames_signin"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/dialog_playgames_desc"
        android:src="@drawable/games_controller_icon" />

</FrameLayout>